<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">TheRespo</string>
    <string name="action_settings">Налаштування</string>
    <string name="login_mail_sign_in">Ввійти</string>
    <string name="login_mail_sign_up">Реєстрація</string>
    <string name="login_mail_sign_up_btn">Зареєструватись</string>
    <string name="recovery_send_btn">Надіслати</string>
    <string name="warning_internet_btn">Пропустити</string>
    <string name="drawer_profile_option">Персональний кабінет</string>
    <string name="feed_filter_all">Всі</string>
    <string name="value_unknown">--</string>
    <string name="withdraw">Вивести</string>
    <string name="default_form_text">Як справи?</string>
    <string name="default_question_text">Чи подобається тобі ця кішка?</string>
    <string name="next_form">Далі</string>
    <string name="form_action_bar">Опитування</string>
    <string name="make_response_before_next_question">Дай, будь ласка, відповідь перед тим, як перейти до наступного питання</string>
    <string name="pending_forms">В обробці</string>
    <string name="zero_forms">0 опитувань</string>
    <string name="history">Історія</string>
    <string name="your_balance">Твій баланс</string>
    <string name="zero_value">0.00</string>
    <string name="your_personal_result">Твій персональний результат</string>
    <string name="all_results">Всі результати</string>
    <string name="all_results_sub_title">(у порядку спадання їх привабливості до тебе)</string>
    <string name="share_facebook">Поділитися у Facebook</string>
    <string name="share_vk">Поділитися у VK</string>
    <string name="search_not_found">Нічого не знайдено</string>
    <string name="reserved_balance">Зарезервовано</string>
    <string name="could_not_login">Не вдалося залогінитися - перевірте підключення до інтернету</string>
    <string name="more_forms">Більше</string>
    <string name="less_forms">Назад</string>
    <string name="therespo_login_motto">Перетворюємо дослідження на hi-tech сервіс</string>
    <string name="transaction_header">За проходження анкети № </string>
    <string name="transaction_currency"> грн</string>
    <string name="transaction_status">Статус: </string>
    <string name="transaction_user">Користувач: </string>
    <string name="questionnare">Стрічка опитувань</string>
    <string name="therespo_login_greeting">Привіт! Зареєструйся, щоб прийняти умови участі у дослідженнях, умови користування ресурсом і політику конфіденційності</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Підтвердіть пароль</string>
    <string name="err_password">Невірно введений пароль</string>
    <string name="recover_pass">Відновити пароль</string>
    <string name="recover_msg">Введи адресу електронної пошти, на яку ми надішлемо форму для відновлення паролю</string>
    <string name="warning_internet_msg">Щоб авторизуватись потрібно підключитись до мережі Інтернет</string>
    <string name="search_feed_text_hint">Пошук за категоріями</string>
    <string name="error_authorization_msg">Заповніть логін/пароль</string>
    <string name="drawer_feed_option">Стрічка</string>
    <string name="drawer_about_option">Про програму</string>
    <string name="drawer_logout_option">Вийти</string>
    <string name="drawer_debug_option">Debug</string>
    <string name="drawer_usage_option">Usage</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="debug_sync_start_time">Last sync (start): %s</string>
    <string name="debug_version_number">Version number: %s</string>
    <string name="debug_sync_finish_time">Last sync (end):  %s</string>
    <string name="debug_sync_active">Synchronization in progress</string>
    <string name="debug_sync_not_active">---</string>
    <string name="debug_categories_amount">Amount of categories: %d</string>
    <string name="debug_forms_amount">Amount of forms in %1$d category: %2$d</string>
    <string name="debug_user_id">User ID:  %s</string>
    <string name="debug_token_id">Token ID: %s</string>
    <string name="debug_token">Token: %s</string>
    <string name="debug_title">DEBUG_SCREEN</string>
    <string name="debug_sync_button">SYNC</string>
    <string name="debug_dump_state_button">DumpState</string>
    <string name="debug_mine_money_button">Get some cash =)</string>
    <string name="usage_request_permission">Request usage permissions</string>
    <string name="usage_permission_on">Usage permission: On</string>
    <string name="usage_permission_off">Usage permission: Off</string>
    <string name="statistic_link">Подивитись статистику</string>
    <string name="bulk_image_test_text">Lorem ipsum dolor</string>
    <string name="bulk_recomend">рекомендую</string>
    <string name="bulk_analog">аналогічно іншим</string>
    <string name="bulk_not_recommend">не рекомендую</string>
    <string name="one">1</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="check_publicate_answer">Я хочу опублікувати відповідь</string>
    <string name="passed_forms">ПРОЙДЕНІ АНКЕТИ</string>
    <string name="research_forms">Дослідницькі</string>
    <string name="fun_forms">Розважальні</string>
    <string name="transactions_title">ОПЛАТА</string>
    <string name="user_balance">Твій баланс </string>
    <string name="forms_in_process">Анкет в обробці</string>
    <string name="last_transaction_time">Останній вивід</string>
    <string name="transactions_amount">Проведено транзакцій</string>
    <string name="charity_transactions">На благодійність</string>
    <string name="user_balance_sample">250 грн.</string>
    <string name="forms_amount_sample">5</string>
    <string name="date_sample">-</string>
    <string name="perform_transaction">ВИВЕСТИ ГРОШІ</string>
    <string name="transactions_history">ІСТОРІЯ ТРАНЗАКЦІЙ</string>
    <string name="forms_block_title">ПРОЙДЕНІ ДОСЛІДЖЕННЯ</string>
    <string name="user_configs_title">НАЛАШТУВАННЯ ПРОФІЛЮ</string>
    <string name="user_email">E-mail</string>
    <string name="users_config_btn_text">ЗМІНИТИ</string>
    <string name="users_change_config_btn_text">ЗБЕРЕГТИ</string>
    <string name="users_phone_change_text">Змінити</string>
    <string name="users_phone_add_text">Додати</string>
    <string name="pass_text">Пароль</string>
    <string name="new_pass_text">Новий пароль</string>
    <string name="repeat_pass">Повтроіть новий пароль</string>
    <string name="phone_number">Моб.тел</string>
    <string name="transactions_popup_date">Дата</string>
    <string name="transactions_popup_transaction">Транзакція</string>
    <string name="transactions_popup_sum">Сума</string>
    <string name="transactions_popup_status">Статус</string>
    <string name="perform_transaction_header_text">У тебе є %.2f респів, 10 респо = 1 UAH. Вкажи необхідну суму в респах.</string>
    <string name="perform_transaction_semi_header_text">Вивести можна не менше 5 UAH</string>
    <string name="more_info_about_charity_transactions"><u>Більше інформації про благодійні фонди та перекази</u></string>
    <string name="accept_transaction">ПІДТВЕРДИТИ</string>
    <string name="decline_transaction">ВІДМІНИТИ</string>
    <string name="pay_transaction_question">Ти справді хочеш конвертувати %1$d респів(%2$.2f гривень) на свій мобільний номер %3$s?</string>
    <string name="change_number_text">Ти можеш змінити свій номер телефону для виводу грошей у персональному кабінеті</string>
    <string name="happy_paw">Happy Paw</string>
    <string name="charity_folk_rear">Народний Тил</string>

    <string-array name="spinner_items">
        <item>На благодійність</item>
        <item>На поповнення моб. рахунку</item>
    </string-array>

    <string name="personal_results">РЕЗУЛЬТАТ</string>
    <string name="popularity">Популярність</string>
    <string name="passed_forms_personal">Пройдені анкети</string>
    <string name="filling">Заповненість</string>
    <string name="respondents">Респонденти, що покращують світ разом з нами</string>
    <string name="projects_examples">Приклади проектів</string>
    <string name="payment_title">ОПЛАТА</string>
    <string name="analytics_title">АНАЛІТИКА</string>
    <string name="payment_btn_text">ПЕРСОНАЛЬНИЙ КАБІНЕТ</string>
    <string name="pocket_logo_text">Отримати детальну інформацію та спостерігати за оновленням стану перевірки ти можеш з персонального кабінету</string>
    <string name="hat_text">Також, пройшовши опитування, ти підвищив власний рівень експертизи - за наступне опитування ти матимеш можливість отримати більше коштів. Детальна інформація доступна у персональному кабінеті</string>
    <string name="current_form_legend_text">даної анкети</string>
    <string name="current_form_legend_text_personal_cab">тобою</string>
    <string name="avg_form_legend_text">середнє</string>
    <string name="expertise_title">ЕКСПЕРТИЗА</string>
    <string name="nothing_to_show">Немає опитувань за даною темою</string>
    <string name="skip_btn">Пропустити</string>
    <string name="accept_permission_btn">Дозволити</string>
    <string name="decline_permission_btn">Завершити</string>
    <string name="confirmation_charity_text">Твої респи були переведені на благодійність до фонду \"%s\" Дякуємо за доброту!</string>
    <string name="confirmation_money_phone_text">Твої респи були переведені на мобільний рахунок %s</string>
    <string name="confirmation_phone_text">Введи номер телефону на який зарахується %.2f гривень</string>
    <string name="warning_update_msg">Твій пристрій не підключений до мережі Інтернет, тому ти не матимеш доступу до найсвіжіших опитувань та статистики</string>
    <string name="declined_permission_msg">Нажаль, ти не зможеш користуватись нашим додатком, оскільки не надав дозволу на збереження файлів на зовнішній носій. Ти можеш надати дозвіл зараз або завершити роботу додатку.</string>
    <string name="authorship">Developed by: Dania Ratych, Yevhen Nechyporenko, Olexandr Kutoviy, Maria Halushko, Vitalii Zhukov</string>
    <string name="phone_format">+38 (0**) *** ** **</string>
    <string name="pre_result_text">Дякуємо за заповнене опитування! Переходь за посиланням, щоб дізнатись персональний результат!</string>
    <string name="personal_result_text">ПЕРСОНАЛЬНИЙ РЕЗУЛЬТАТ</string>
    <string name="next_button_text">Далі</string>
</resources>
