<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/transactions_header_layout_margin_top"
        android:layout_marginTop="@dimen/transactions_header_layout_margin_left"
        android:orientation="horizontal">

        <com.febaisi.CustomTextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactions_popup_date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            app:typeface="MyriadPro-Regular.ttf" />

        <com.febaisi.CustomTextView
            android:id="@+id/transaction_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/transactions_header_text_margin_left"
            android:text="@string/transactions_popup_transaction"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            app:typeface="MyriadPro-Regular.ttf" />

        <com.febaisi.CustomTextView
            android:id="@+id/transaction_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/transactions_header_text_margin_left"
            android:text="@string/transactions_popup_sum"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            app:typeface="MyriadPro-Regular.ttf" />

        <com.febaisi.CustomTextView
            android:id="@+id/transaction_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/transactions_header_text_margin_left"
            android:text="@string/transactions_popup_status"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            app:typeface="MyriadPro-Regular.ttf" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/transactions_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/transactions_list_margin_top" />
</LinearLayout>