<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/phone_confirmation_popup_side"
    android:paddingRight="@dimen/phone_confirmation_popup_side">

    <com.febaisi.CustomTextView
        android:id="@+id/cell_confirmation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/perform_transaction_header_margin"
        android:text="@string/confirmation_phone_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/perform_transaction_header"
        android:textStyle="bold"
        app:typeface="MyriadPro-Regular.ttf" />

    <com.github.pinball83.maskededittext.MaskedEditText
        android:id="@+id/enter_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cell_confirmation_text"
        android:layout_alignStart="@+id/cell_confirmation_text"
        android:layout_below="@+id/cell_confirmation_text"
        android:layout_marginTop="@dimen/semi_header_margin_top"
        android:digits="0123456789"
        android:ems="@integer/enter_money_ems"
        android:inputType="number"
        app:mask="@string/phone_format"
        app:notMaskedSymbol="*" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_money"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/confirmation_buttons_top">

        <CheckBox
            android:id="@+id/confirm_btn"
            android:layout_width="@dimen/transactions_popup_button_width"
            android:layout_height="@dimen/transactions_popup_button_height"
            android:background="@drawable/popup_approve_btn"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/accept_transaction"
            android:textColor="@color/white"
            android:textSize="@dimen/accept_transaction_text_size" />

        <CheckBox
            android:id="@+id/decline_btn"
            android:layout_width="@dimen/transactions_popup_button_width"
            android:layout_height="@dimen/transactions_popup_button_height"
            android:layout_marginLeft="@dimen/confirm_btn_margin_left"
            android:layout_toRightOf="@+id/confirm_btn"
            android:background="@drawable/popup_decline_btn"
            android:button="@null"
            android:gravity="center"
            android:text="@string/decline_transaction"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>