<?xml version="1.0" encoding="utf-8"?>
<com.questbase.app.flowui.views.AuthorizationMailView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/auth_mail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_for_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_card_margin_side"
        android:layout_marginRight="@dimen/login_card_margin_side"
        android:layout_marginTop="@dimen/login_card_margin_top"
        android:background="@color/logo_auth_background"
        android:gravity="left"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/login_edit_text_side"
            android:layout_marginRight="@dimen/login_edit_text_side"
            android:layout_marginTop="@dimen/login_mail_top"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/sign_in_input_text"
            android:textColorHint="@color/sign_in_edit_text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/login_edit_text_side"
            android:layout_marginRight="@dimen/login_edit_text_side"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/sign_in_input_text"
            android:textColorHint="@color/sign_in_edit_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.febaisi.CustomTextView
                android:id="@+id/error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/recovery_text_bottom"
                android:layout_marginLeft="@dimen/recovery_text_left"
                android:layout_marginTop="@dimen/recovery_text_top"
                android:clickable="true"
                android:gravity="start"
                android:textSize="@dimen/recovery_text_size"
                app:typeface="MyriadPro-Light semiextended.ttf" />

            <com.febaisi.CustomTextView
                android:id="@+id/recover_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/recovery_text_bottom"
                android:layout_marginRight="@dimen/recovery_text_left"
                android:layout_marginTop="@dimen/recovery_text_top"
                android:gravity="start"
                android:text="@string/recover_pass"
                android:textSize="@dimen/recovery_text_size"
                app:typeface="MyriadPro-Light semiextended.ttf" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/signs_btn_top"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="@dimen/login_mail_btn_width"
                android:layout_height="@dimen/login_mail_btn_height"
                android:layout_marginLeft="@dimen/signs_btn_side"
                android:layout_marginRight="@dimen/signs_btn_side"
                android:background="@drawable/red_background_btn"
                android:text="@string/login_mail_sign_in"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="@dimen/login_mail_btn_width"
                android:layout_height="@dimen/login_mail_btn_height"
                android:layout_marginLeft="@dimen/signs_btn_side"
                android:layout_marginRight="@dimen/signs_btn_side"
                android:background="@drawable/sign_up_btn"
                android:text="@string/login_mail_sign_up"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <com.febaisi.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/login_greeting_bottom"
        android:layout_marginLeft="@dimen/login_greeting_side"
        android:layout_marginRight="@dimen/login_greeting_side"
        android:layout_marginTop="@dimen/login_greeting_top"
        android:gravity="center"
        android:text="@string/authorship"
        android:textColor="@color/logo_auth_background"
        android:textSize="@dimen/authorship_text_size"
        app:typeface="Myriad Pro Light.ttf" />
</com.questbase.app.flowui.views.AuthorizationMailView>